; SU1X Change log
;
; ** 08/09/2011
;	Fixed bug with getprofiles and wireless centrino not reporting as wifi cards
;	Fixed bug with LAN card detection with 64bit win7 lan drivers
;
; ** 11/07/2011
;	Added a remove paramater to remove profile/schedule task on a uninstall by a uninstaller
;	Uninstall now also removes installed wireless networks and wired networks
;
; **29/06/2011
;	Changed the way wireless profiles are captured and handled
;	Can now use unlimited wireless profiles
;	Wireless Profile Filenames are important, and must be maintainted from getprofile tool
;
; **24/06/2011
;	Update of code to improve programming efficiency
;	Renamed main file eduswan.au3 to suwx-setup.au3
;
;	Made use of code suggestions from Alexander van der Mey and Alexander Clouter
;
; **31/05/2011
;	Changed cert install command to work with p7b files on request of david sullivan of barnet.ac.uk
;
; **24/05/2011
;	Added fallback ssid support
;	Added get help button
;	Added scheduled task for reauth interception, with custom tab/button/checks
;		Reauth interception only occurs if rauath doesnt connect automatically after 8 seconds
;
;
; **16/05/2011
;	Added support for sending problem reports to a web server
;	Added support for sending ldap_login tests to a web server
;	See web_support.txt for info on the web support options
;
; **29/01/2011
;  Added support for multiple profile instalation
;
; **27/01/2011
;  Added GUI display options
;  Fixed bug with mac address lookup
;  Fixed bug with getprofile and some wireless cards
;
;  **13/12/10
;  Added Wired support for 802.1x profile on 802.3
;  Wireless and/or Wired profiles can be configured
;  Added netsh wlan show all output to debug=2 on support tab
;  Fixed bug with wireless win7/vista multiple profile selection
;  Added removal of wired profile on 802.3
;  Fixed bug of mac address discovery on win7
;
;  **28/09/10
;  Added popup debug output to file output.
;
;  **13/09/10
;  Added text to describe username and password text fields