@@ -1,14 +1,16 @@
 <?xml version="1.0"?>
 <WLANProfile xmlns="http://www.microsoft.com/networking/WLAN/profile/v1">
-	<name>eduroam-setup</name>
+	<name>SwanseaUni-setup</name>
 	<SSIDConfig>
 		<SSID>
-			<hex>656475726F616D2D7365747570</hex>
-			<name>eduroam-setup</name>
+			<hex>5377616E736561556E692D7365747570</hex>
+			<name>SwanseaUni-setup</name>
 		</SSID>
+		<nonBroadcast>false</nonBroadcast>
 	</SSIDConfig>
 	<connectionType>ESS</connectionType>
 	<connectionMode>auto</connectionMode>
+	<autoSwitch>false</autoSwitch>
 	<MSM>
 		<security>
 			<authEncryption>
