@@ -1,24 +1,0 @@
-<?xml version="1.0"?>
-<WLANProfile xmlns="http://www.microsoft.com/networking/WLAN/profile/v1">
-	<name>eduroam</name>
-	<SSIDConfig>
-		<SSID>
-			<hex>656475726F616D</hex>
-			<name>eduroam</name>
-		</SSID>
-	</SSIDConfig>
-	<connectionType>ESS</connectionType>
-	<MSM>
-		<security>
-			<authEncryption>
-				<authentication>WPA2</authentication>
-				<encryption>AES</encryption>
-				<useOneX>true</useOneX>
-			</authEncryption>
-			<OneX xmlns="http://www.microsoft.com/networking/OneX/v1">
-				<authMode>user</authMode>
-				<EAPConfig><EapHostConfig xmlns="http://www.microsoft.com/provisioning/EapHostConfig"><EapMethod><Type xmlns="http://www.microsoft.com/provisioning/EapCommon">25</Type><VendorId xmlns="http://www.microsoft.com/provisioning/EapCommon">0</VendorId><VendorType xmlns="http://www.microsoft.com/provisioning/EapCommon">0</VendorType><AuthorId xmlns="http://www.microsoft.com/provisioning/EapCommon">0</AuthorId></EapMethod><Config xmlns="http://www.microsoft.com/provisioning/EapHostConfig"><Eap xmlns="http://www.microsoft.com/provisioning/BaseEapConnectionPropertiesV1"><Type>25</Type><EapType xmlns="http://www.microsoft.com/provisioning/MsPeapConnectionPropertiesV1"><ServerValidation><DisableUserPromptForServerValidation>true</DisableUserPromptForServerValidation><ServerNames>radauth.swan.ac.uk;radauth2.swan.ac.uk;bouncer.swan.ac.uk;ccs-radius1.brynmill.swan.ac.uk;ccs-radius2.brynmill.swan.ac.uk</ServerNames><TrustedRootCA>97 81 79 50 d8 1c 96 70 cc 34 d8 09 cf 79 44 31 36 7e f4 74 </TrustedRootCA><TrustedRootCA>e1 9d 1d 68 8a ec 6e 47 ba 7b a4 2a cc 6c a4 55 aa 65 d8 82 </TrustedRootCA></ServerValidation><FastReconnect>true</FastReconnect><InnerEapOptional>false</InnerEapOptional><Eap xmlns="http://www.microsoft.com/provisioning/BaseEapConnectionPropertiesV1"><Type>26</Type><EapType xmlns="http://www.microsoft.com/provisioning/MsChapV2ConnectionPropertiesV1"><UseWinLogonCredentials>false</UseWinLogonCredentials></EapType></Eap><EnableQuarantineChecks>false</EnableQuarantineChecks><RequireCryptoBinding>false</RequireCryptoBinding><PeapExtensions><PerformServerValidation xmlns="http://www.microsoft.com/provisioning/MsPeapConnectionPropertiesV2">false</PerformServerValidation><AcceptServerName xmlns="http://www.microsoft.com/provisioning/MsPeapConnectionPropertiesV2">false</AcceptServerName></PeapExtensions></EapType></Eap></Config></EapHostConfig></EAPConfig>
-			</OneX>
-		</security>
-	</MSM>
-</WLANProfile>
