@@ -1,0 +1,34 @@
+<?xml version="1.0"?>
+<WLANProfile xmlns="http://www.microsoft.com/networking/WLAN/profile/v1">
+	<name>eduroam</name>
+	<SSIDConfig>
+		<SSID>
+			<hex>656475726F616D</hex>
+			<name>eduroam</name>
+		</SSID>
+	</SSIDConfig>
+	<connectionType>ESS</connectionType>
+	<MSM>
+		<security>
+			<authEncryption>
+				<authentication>WPA2</authentication>
+				<encryption>AES</encryption>
+				<useOneX>true</useOneX>
+			</authEncryption>
+			<OneX xmlns="http://www.microsoft.com/networking/OneX/v1">
+				<authMode>user</authMode>
+				<EAPConfig>
+					<EapHostConfig xmlns="http://www.microsoft.com/provisioning/EapHostConfig">
+						<EapMethod>
+							<Type xmlns="http://www.microsoft.com/provisioning/EapCommon">25</Type>
+							<VendorId xmlns="http://www.microsoft.com/provisioning/EapCommon">0</VendorId>
+							<VendorType xmlns="http://www.microsoft.com/provisioning/EapCommon">0</VendorType>
+							<AuthorId xmlns="http://www.microsoft.com/provisioning/EapCommon">0</AuthorId>
+						</EapMethod>
+						<ConfigBlob>01000000600100000100000001000000010000003701000031000000020000001400000097817950D81C9670CC34D809CF794431367EF47414000000E19D1D688AEC6E47BA7BA42ACC6CA455AA65D88272006100640061007500740068002E007300770061006E002E00610063002E0075006B003B00720061006400610075007400680032002E007300770061006E002E00610063002E0075006B003B0062006F0075006E006300650072002E007300770061006E002E00610063002E0075006B003B006300630073002D0072006100640069007500730031002E006200720079006E006D0069006C006C002E007300770061006E002E00610063002E0075006B003B006300630073002D0072006100640069007500730032002E006200720079006E006D0069006C006C002E007300770061006E002E00610063002E0075006B00000001000000170000001A00000001000000000000000000000000000000</ConfigBlob>
+					</EapHostConfig>
+				</EAPConfig>
+			</OneX>
+		</security>
+	</MSM>
+</WLANProfile>
