@@ -1,5 +1,8 @@
 ; SU1X Change log
 ;
+; ** 14/09/2011
+;	Fixed bug with multiple profiles with wpa2 and wpa and open networks.
+;
 ; ** 08/09/2011
 ;	Fixed bug with getprofiles and wireless centrino not reporting as wifi cards
 ;	Fixed bug with LAN card detection with 64bit win7 lan drivers
